syntax = "proto3";

import "google/protobuf/timestamp.proto";

package klaytn;

option go_package = "github.com/nakji-network/connectors/klaytn";


// to convert addresses from bytes to hex address, https://github.com/klaytn/klaytn/blob/214abfc364c04a702f90764d3a0cd6b500715846/common/types.go#L164
// change Signature to the slice of Signature
message Transaction {
  google.protobuf.Timestamp ts = 1; //uint64
  bytes                     from = 2;
  string                    hash = 3;
  double                    size = 4;
  uint64                    account_nonce = 5; // uint64
  uint64                    price = 6; // big.int
  uint64                    gas_limit = 7; // uint64
  bytes                     recipient = 8;
  uint64                    amount = 9; // big.int
  bytes                     payload = 10;
  repeated Signature       signatures = 11;
}

message Signature {
  uint64                    v = 1; // big.int
  uint64                    r = 2; // big.int
  uint64                    s = 3; // big.int
}

message Block {
  google.protobuf.Timestamp ts = 1; //uint64
  string                    hash = 2;
  uint64                    block_score = 3; //bigint
  uint64                    number = 4; //bigint
  uint64                    gas_used = 5; // uint64
}